# rust_analyzer_api_examples

./: Cargo.toml  README.md  go.sum
docs/: 01_client_req_initialize.json  02_client_notify_initialized.json  03_server_req_cap.json  codelens_resolve_req.json  lsp_notes.md
examples/: a.rs  test_tracing.rs
src/: analysis_annotations.rs  common.rs  graphviz_render_crate_graph.rs  lib.rs  print_all_crates_in_workspace.rs  unused_pub_analysis_annotations.rs  unused_pub_find_all_refs.rs  unused_pub_ra_lsp_client.rs
src/misc_code_snippets/: mod.rs  rustc_lexer_calculator.rs  tracing_instrument.rs
src/toy_calculator/: mod.rs
