[package]
name = "rust_analyzer_api"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-analyzer = { path = "../rust-analyzer/crates/rust-analyzer" }
project_model = { path = "../rust-analyzer/crates/project_model" }
paths = { path = "../rust-analyzer/crates/paths" }
syntax =  { path = "../rust-analyzer/crates/syntax" } # AST

hir =  { path = "../rust-analyzer/crates/hir" }

# unuse
ide = { path = "../rust-analyzer/crates/ide"  }
ide_db = { path = "../rust-analyzer/crates/ide_db" }
vfs = { path = "../rust-analyzer/crates/vfs" }

tracing = "*"
tracing-subscriber = "*"
anyhow = "*"

log = "*" # use in tracing_instrument only
# env_logger = "*" # use in tracing_instrument only

[package.metadata.rust-analyzer]
rustc_private = true
