[package]
name = "rust_analyzer_api"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
# rust-analyzer commit hash dd21ad6a5e8ffa166c97447212d3da0f86555aee
rust-analyzer = { path = "../rust-analyzer/crates/rust-analyzer" }
project_model = { path = "../rust-analyzer/crates/project_model" }
paths = { path = "../rust-analyzer/crates/paths" }
syntax =  { path = "../rust-analyzer/crates/syntax" } # AST
base_db = { path = "../rust-analyzer/crates/base_db" }
hir =  { path = "../rust-analyzer/crates/hir" }
hir_expand =  { path = "../rust-analyzer/crates/hir_expand" }
ide = { path = "../rust-analyzer/crates/ide"  }
ide_db = { path = "../rust-analyzer/crates/ide_db" }
vfs = { path = "../rust-analyzer/crates/vfs" }

serde_json = "*"
lsp-types = "*"

tracing = "*"
tracing-subscriber = "*"
log = "*" # use in tracing_instrument only
# env_logger = "*" # use in tracing_instrument only

[package.metadata.rust-analyzer]
rustc_private = true
